// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card component should match snapshot 1`] = `
<div>
  <div
    class="css-15tes2-Card"
  >
    <div
      class="css-8e25xx"
    >
      Card
    </div>
  </div>
</div>
`;

exports[`Card component should render with bottom accent 1`] = `
<div>
  <div
    class="css-15tes2-Card"
  >
    <div
      class="css-8e25xx"
    >
      content
    </div>
  </div>
</div>
`;

exports[`Card component should render with left accent 1`] = `
<div>
  <div
    class="css-1t98pyd-Card"
  >
    <div
      class="css-8e25xx"
    >
      content
    </div>
  </div>
</div>
`;

exports[`Card component should render with right accent 1`] = `
<div>
  <div
    class="css-15tes2-Card"
  >
    <div
      class="css-8e25xx"
    >
      content
    </div>
  </div>
</div>
`;

exports[`Card component should render with top accent 1`] = `
<div>
  <div
    class="css-15az4k1-Card"
  >
    <div
      class="css-8e25xx"
    >
      content
    </div>
  </div>
</div>
`;
